--- a/todolist.csproj
+++ b/todolist.csproj
@@ -5,6 +5,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<PackAsTool>true</PackAsTool>
+	<ToolCommandName>todo</ToolCommandName>
+	<PackageId>HTETodoTool</PackageId>
+	<Version>1.0.2</Version>
+	<Authors>HTE</Authors>
+	<Company>Imperium</Company>
   </PropertyGroup>
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="content" />
+	</ItemGroup>
+
 
 </Project>
+
